--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.toptal.com/developers/gitignore/api/windows,linux,macos,django,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,macos,django,python
 
@@ -158,7 +157,6 @@ Thumbs.db
 # profiling data
 .prof
 
-
 ### Linux ###
 *~
 
@@ -182,7 +180,6 @@ Thumbs.db
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
@@ -271,7 +268,6 @@ Temporary Items
 
 # profiling data
 
-
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db:encryptable
@@ -299,4 +295,7 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,django,python
 
+# ignore django migrations
 
+intranet/migrations/*
+!intranet/migrations/__init__.py
