--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==3.2.3
 django-bootstrap-v5==1.0.4
 importlib-metadata==3.10.1
 install==1.3.4
+Pillow==8.2.0
 pycodestyle==2.7.0
 pytz==2021.1
 soupsieve==2.2.1
