--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,linux,macos,django,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,macos,django,python
 
+# vim extension -yongjule
+tags
 ### Django ###
 *.log
 *.pot
