--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.3.4
 autopep8==1.5.7
 beautifulsoup4==4.9.3
 Django==3.2.3
-django-bootstrap-v5==1.0.4
+django-bootstrap4==3.0.1
 importlib-metadata==3.10.1
 install==1.3.4
 Pillow==8.2.0
