--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ autopep8==1.5.7
 beautifulsoup4==4.9.3
 Django==3.2.3
 django-bootstrap4==3.0.1
+gunicorn==20.1.0
 importlib-metadata==3.10.1
 install==1.3.4
 Pillow==8.2.0
